[package]
name = "cron-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
chrono-tz = "0.10.3"
clap = { version = "4.5.21", features = ["derive"] }
nom = "7.1.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
signal-hook = "0.3.17"
sysinfo = "0.32.0"
iana-time-zone = "0.1.63"
log = "0.4.27"
env_logger = "0.11.3"
syslog = "6.1.0"